chore: prepare v1.0.0 release with automated PyPI publishing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,10 @@ jobs:
         flake8 prunarr/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 prunarr/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=100 --statistics
 
+    - name: Check for unused imports with autoflake
+      run: |
+        autoflake --check --remove-all-unused-imports --remove-unused-variables -r prunarr/ tests/
+
     - name: Check formatting with black
       run: |
         black --check prunarr/ tests/
