--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "prunarr"
-version = "2.0.0"
+version = "1.0.0"
 description = "Automated media library cleanup for Radarr and Sonarr based on Tautulli watch status"
 authors = [{ name = "Haije Ploeg", email = "ploeg.haije@gmail.com" }]
 readme = "README.md"
@@ -12,7 +12,7 @@ license = { text = "Apache-2.0" }
 requires-python = ">=3.9"
 keywords = ["radarr", "sonarr", "tautulli", "media", "automation", "cleanup"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: System Administrators",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
@@ -41,6 +41,7 @@ dev = [
     "black>=23.11.0",
     "isort>=5.12.0",
     "flake8>=6.1.0",
+    "autoflake>=2.2.0",
     "mypy>=1.7.1",
     "bandit>=1.7.5",
     "safety>=2.3.4",
