chore(ci): Only run on main and on every push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,11 @@ name: CI
 
 on:
   push:
-    branches: [ main, staging ]
+    # Run on every push to any branch
+    branches: [ "**" ]
   pull_request:
-    branches: [ main, staging ]
+    # Run on pull requests targeting main
+    branches: [ main ]
 
 jobs:
   test:
