fix(build): exclude helm directory from Python package discovery
Fixes package build error where setuptools was discovering both 'prunarr'
and 'helm' as top-level packages. Added explicit package discovery config
to only include prunarr packages and exclude helm, tests, and docs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,11 @@ Repository = "https://github.com/hploeg/prunarr"
 Documentation = "https://github.com/hploeg/prunarr#readme"
 "Bug Reports" = "https://github.com/hploeg/prunarr/issues"
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["prunarr*"]
+exclude = ["helm*", "tests*", "docs*"]
+
 [tool.setuptools.dynamic]
 version = {attr = "prunarr.__version__"}
 
