--- a/helm/prunarr/values.yaml
+++ b/helm/prunarr/values.yaml
@@ -4,7 +4,7 @@
 
 # Container image configuration
 image:
-  repository: ghcr.io/hploeg/prunarr
+  repository: ghcr.io/haijeploeg/prunarr
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion
   # Leave empty to use appVersion from Chart.yaml
